argocd/apps/homeassistant/influxdb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  namespace: homeassistant
  labels:
    app: influxdb
spec:
  selector:
    matchLabels:
      app: influxdb
  replicas: 1
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - name: influxdb
        image: influxdb:2.5.1
        ports:
        - containerPort: 8086
        volumeMounts:
        - mountPath: /var/lib/influxdb2
          name: data
        resources:  {}
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: influxdb-data
